[project]
name = "poe-currency-flip-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "matplotlib>=3.10.5",
    "mouse>=0.7.1",
    "mss>=10.1.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
]
